--- a/flash JS/css/panel.css
+++ b/flash JS/css/panel.css
@@ -293,7 +293,7 @@ option {
     left: 92%; 
     color: red;
     border-radius: 15%;
-    background-color: rgba(105, 165, 165, 0.452);
+    background-color: rgb(243 244 246 / 62%);
 }
 
 
